# EigenPrim

./: .gitignore  CMakeLists.txt  LOG.md  README.md  THIRD_PARTY_NOTICES.md  TODO.md  _eigenprim_nvidia_path.py  eigenprim_cuda_activate.pth  example.py  example_l2.py  example_l3.py  example_transform.py  pixi.toml  pyproject.toml  slides_outline.md
.devcontainer/: .zshrc  Dockerfile  devcontainer.json  post_install.py
eigenprim/: __init__.py  _env.py  _registry.py  bind.py  compile.py  dispatch.py  matrix.py  methods.py  numpy_utils.py  operators.py  templates.py  types.py  vec3f.py
eigenprim/include/: eigen_stub.cuh  generic.cuh  matrix.cu  matrix.cuh  matrix_decl.cuh
examples/: 01_vector_basics.py  02_all_types.py  03_point_cloud_transform.py  03_templates.py  04_batch_linear_solve.py  04_point_cloud_transform.py  05_batch_linear_solve.py  05_templates.py  06_triangle_normals.py  07_covariance_matrix.py  08_aabb_reduction.py  09_double_precision.py  10_half_precision.py  10_methods.py  11_bfloat16.py  11_numpy_aos.py  README.md
include/: eigen_stub.cuh  eigen_wrapper_l1.cuh  eigen_wrapper_l1_decl.cuh  eigen_wrapper_l1_impl.cu  eigen_wrapper_l2.cuh  eigen_wrapper_l2_decl.cuh  eigen_wrapper_l2_impl.cu  eigen_wrapper_l3.cuh  eigen_wrapper_l3_decl.cuh  eigen_wrapper_l3_impl.cu  generic.cu  generic_decl.cuh  matrix.cuh  matrix_decl.cuh  vec3f.cu  vec3f.cuh  vec3f_decl.cuh
scripts/: run_examples.sh
tests/: explore_eigen_ast.py  explore_eigen_ast2.py  explore_eigen_ast3.py  test_api_surface.py  test_bind_eigen.py  test_crash_fix.py  test_l2_nvrtc.py  test_methods.py  test_parse_eigen.py
