[build-system]
requires = ["scikit-build-core>=0.12"]
build-backend = "scikit_build_core.build"

[project]
name = "eigenprim"
version = "0.1.0"
description = "Eigen device primitives for CUDA Python"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "numba-cuda>=0.25.0",
    "cuda-pathfinder>=1.5",
    "cuda-python>=13",
    "numbast",
    "ast_canopy",
]

[project.optional-dependencies]
# Runtime nvcc compiler — can also be satisfied by a system/conda install
# discovered by cuda-pathfinder and activated onto PATH at interpreter startup.
nvcc = ["nvidia-cuda-nvcc"]

[tool.scikit-build]
minimum-version = "build-system.requires"
wheel.packages = ["eigenprim"]
wheel.py-api = "py3"
wheel.platlib = false
