[build-system]
requires = [
    "cuda-activate @ git+https://github.com/dalcinl/skbuild-cuda-demo.git@master#subdirectory=src/cuda-activate",
    "cuda-pathfinder>=1.5",
    "cuda-toolkit[cccl,nvcc,cudart]==13.*",
    "scikit-build-core>=0.12",
]
build-backend = "scikit_build_core.build"

[project]
name = "eigenprim"
version = "0.1.0"
description = "Eigen device primitives for CUDA Python"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "numba-cuda>=0.25.0",
    "cuda-python>=13",
    "numbast>=0.8.0",
    "ast_canopy>=0.8.0",
]

[tool.scikit-build]
minimum-version = "build-system.requires"
wheel.packages = ["eigenprim"]
wheel.py-api = "py3"
wheel.platlib = false

[tool.scikit-build.cmake]
version = ">=3.27"
